syntax = "proto3";
package slinky.marketmap.v1;
import "slinky/marketmap/v1/market.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/skip-mev/slinky/x/marketmap/types";

// GenesisState defines the x/marketmap module's genesis state.
message GenesisState {
  // TickersConfig is the full list of markets and their associated
  // configurations to be stored on-chain.
  TickersConfig tickers = 1 [ (gogoproto.nullable) = false ];
}